--- a/views/register.html
+++ b/views/register.html
@@ -4,6 +4,6 @@
   <label>Emailid</label>
   <input type="text" name="email" class="span3" placeholder="Email">
   <label>Password</label>
-  <input type="text" name="password" class="span3" placeholder="Password">
+  <input type="password" name="password" class="span3" placeholder="Password">
   <button type="submit" class="btn">Submit</button>
 </form>
