--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,3 +15,28 @@ body{
     top: 0;
     z-index: 10000;
 }
+
+.logo{
+    font-size: 25px;
+    color: #000;
+    padding-top: 15px;
+    float: left;
+}
+
+.menu{
+    padding-top: 10px;
+    float: right;
+}
+
+#content{
+    margin-top: 85px;
+    height: 350px;
+    background-color: #fefefe;
+    border: 1px solid #dedede;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding: 10px;
+    width: 920px!important;
+}
+
