--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
-
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
+<div class="inner">
+<h1>Bootstrap, from Twitter</h1>
+<p>Simple and flexible HTML, CSS, and Javascript for popular user interface components and interactions.</p>
+<a href="/register" class="btn btn-large btn-primary">Signup for Free</a>
+</div>
