--- a/views/layout.html
+++ b/views/layout.html
@@ -7,30 +7,26 @@
 	    <!--<link rel="shortcut icon" type="image/x-icon" href="/image/favicon.ico">-->
 	</head>
 	<body>
-	    <div class="navbar navbar-fixed-top">
-		<div class="navbar-inner">
-		  <div class="container">
-		    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-		      <span class="icon-bar"></span>
-		      <span class="icon-bar"></span>
-		      <span class="icon-bar"></span>
-		    </a>
-		    <a class="brand" href="/">Project name</a>
-		    <div class="nav-collapse">
-		      <ul class="nav">
-			<li class="active"><a href="/">Home</a></li>
-			<li><a href="/register">Register</a></li>
-			<li><a href="/login">Login</a></li>
-			<li><a href="/confirmation">Confirm</a></li>
-		      </ul>
-		    </div><!--/.nav-collapse -->
-		  </div>
+	    <div id="wrapper">
+		<!-- Header -->
+		<div id="header">
+		    <div class="container">
+			<div class="logo">
+			    <a href="/">NODE.JS</a>
+			</div>
+			<div class="menu">
+			    <ul class="nav nav-pills">
+				<li class="active"><a href="/">Home</a></li>
+				<li><a href="#">Why?</a></li>
+				<li><a href="#">Help</a></li>
+				<li><a href="/login">Login</a></li>
+			    </ul>
+			</div>
+		    </div>
 		</div>
 	    </div>
-	    <div class="container" style="margin-top: 80px;">
+	    <div class="container" id="content">
 	    {{html body}}
 	    </div>
-
-    </div>
 	</body>
     </html>
