--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,114 @@
-<div class="inner">
-<h1>Bootstrap, from Twitter</h1>
-<p>Simple and flexible HTML, CSS, and Javascript for popular user interface components and interactions.</p>
-<a href="/register" class="btn btn-large btn-primary">Signup for Free</a>
-</div>
+ <!-- Banner -->
+            <div id="banner">
+                <div class="container" id="banner-content">
+                    <h2>Manage your cloud storage with ease.</h2>
+                    <div class="big-media">
+                        <img width="940" height="340" src="/images/banner.jpg" alt="Fleet maintenance software, and so much more.">
+                    </div>
+                </div>
+            </div>
+            <!-- Content -->
+            <div class="container content">
+<div class="row">
+                    <div class="span9">
+                        <h2 class="heading">Web-based hub software that makes it easy to manage all cloud storage account's at single point from anywhere. </h2>
+                    </div>
+                    <div class="span3" id="free">
+                        <div>
+                            <a href="/register" class="btn btn-success huge"> Sign Up for Free </a>
+                        </div>
+                        <div>
+                            <h3>100% FREE</h3>
+                            <p>It's free and always will be.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr/>
+                <div class="row">
+                    <div class="span6">
+                        <div class="row">
+                            <div class="span1">
+                                sample
+                            </div>
+                            <div class="span5">
+                                <h3>All vehicle details in one place</h3>
+                                <p> Eliminate clutter and keep all fleet information in one safe and secure place &mdash; accessible online anytime, anywhere. </p>
+<p> Maintenance records, purchase &amp; disposal data, insurance history... Everything in a vehicle's lifecycle can be kept in Fleetio. </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="span1">
+                                sample
+                            </div>
+                            <div class="span5">
+                                <h3>All vehicle details in one place</h3>
+                                <p> Eliminate clutter and keep all fleet information in one safe and secure place &mdash; accessible online anytime, anywhere. </p>
+<p> Maintenance records, purchase &amp; disposal data, insurance history... Everything in a vehicle's lifecycle can be kept in Fleetio. </p>
+<p> Maintenance records, purchase &amp; disposal data, insurance history... Everything in a vehicle's lifecycle can be kept in Fleetio. </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="span1">
+                                sample
+                            </div>
+                            <div class="span5">
+                                <h3>All vehicle details in one place</h3>
+                                <p> Eliminate clutter and keep all fleet information in one safe and secure place &mdash; accessible online anytime, anywhere. </p>
+<p> Maintenance records, purchase &amp; disposal data, insurance history... Everything in a vehicle's lifecycle can be kept in Fleetio. </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="span1">
+                                sample
+                            </div>
+                            <div class="span5">
+                                <h3>All vehicle details in one place</h3>
+                                <p> Eliminate clutter and keep all fleet information in one safe and secure place &mdash; accessible online anytime, anywhere. </p>
+<p> Maintenance records, purchase &amp; disposal data, insurance history... Everything in a vehicle's lifecycle can be kept in Fleetio. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="span6">
+                        <div class="row">
+                            <div class="span1">
+                                sample
+                            </div>
+                            <div class="span5">
+                                <h3>All vehicle details in one place</h3>
+                                <p> Eliminate clutter and keep all fleet information in one safe and secure place &mdash; accessible online anytime, anywhere. </p>
+<p> Maintenance records, purchase &amp; disposal data, insurance history... Everything in a vehicle's lifecycle can be kept in Fleetio. </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="span1">
+                                sample
+                            </div>
+                            <div class="span5">
+                                <h3>All vehicle details in one place</h3>
+                                <p> Eliminate clutter and keep all fleet information in one safe and secure place &mdash; accessible online anytime, anywhere. </p>
+<p> Maintenance records, purchase &amp; disposal data, insurance history... Everything in a vehicle's lifecycle can be kept in Fleetio. </p>
+                            </div>
+                        </div>
+                        <div class="well">
+                            <!--<iframe width="445" height="255" src="http://www.youtube.com/embed/UF8uR6Z6KLc" frameborder="0" allowfullscreen></iframe>-->
+                            <img width="420" height="252" src="/images/demo.png" alt="Fleet management software reports">
+                            <h6>Introducing new reports in Fleetio</h6>
+<p style="font-size: 90%; margin:0;">Watch the 2-minute overview of the latest reporting features.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <blockquote class="big-quote">
+                    <h2>
+                      Fleetio has allowed us to focus on our primary concentration &mdash; Landscape &amp; Artificial
+                      Turf Services. We have been able to maintain our fleet with little downtime due to poor vehicle
+                      performance.
+                    </h2>
+                        <small>
+                          Cory Milam,
+                          <a title="Elite TurfCare Group website" target="_blank" href="http://www.eliteturfcare.com/">
+                            Elite TurfCare Group
+                          </a>
+                        </small>
+                </blockquote>
+                </div>
